# CosmicGravitas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-release.bat  build-release.sh  install-release.bat  install-release.sh
include/: Camera.hpp  Clock.hpp  InputManager.hpp  Main.hpp  Planet.hpp  Random.hpp  ScreenRender.hpp  Simulation.hpp  Vector2.hpp  const.hpp  main.hpp  rgba.hpp
src/: Camera.cpp  Clock.cpp  Gravity.hpp  Main.cpp  Planet.cpp  Planet.hpp  Random.cpp  ScreenRender.cpp  Simulation.cpp  Vector2.cpp  main.cpp
src/Physics/: Engine.hpp  FloatType.hpp  ForceGenerator.hpp  Object.hpp  Solver.hpp  Vector.hpp  World.hpp
src/Physics/solvers/: VerletSolver.hpp
